[FAIT] - Transformer todo en info

--- a/app/routes/content/about/about.css
+++ b/app/routes/content/about/about.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/content/about/about.css */
+/* Info : app/routes/content/about/about.css */
 
 .about-page {
     overflow-x: hidden;
