--- a/app/routes/content/reviews/reviews.css
+++ b/app/routes/content/reviews/reviews.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/content/reviews/reviews.css */
+/* Info : app/routes/content/reviews/reviews.css */
 
 .reviews-page {
     overflow-x: hidden;
