[FAIT] - Transformer todo en info

--- a/app/components/components.css
+++ b/app/components/components.css
@@ -1,4 +1,4 @@
-/* ===== VARIABLES RESPONSIVES COMMUNES ===== */
+/* Info : app/components/components.css */
 :root {
     --deep-night: #0D0D0D;
     --dark-blue: #121212;
