--- a/app/components/layout/navbar/navbar.css
+++ b/app/components/layout/navbar/navbar.css
@@ -1,4 +1,4 @@
-/* Todo : app/styles/components/layout/navbar.css */
+/* Info : app/styles/components/layout/navbar.css */
 .navbar {
     position: fixed;
     top: 0;
