--- a/app/routes/public/gallery/gallery.css
+++ b/app/routes/public/gallery/gallery.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/public/gallery/gallery.css */
+/* Info : app/routes/public/gallery/gallery.css */
 
 .gallery-page {
     overflow-x: hidden;
