--- a/app/routes/public/service/pricing-common.css
+++ b/app/routes/public/service/pricing-common.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/public/service/pricing-common.css */
+/* Info : app/routes/public/service/pricing-common.css */
 
 /* Services Section */
 .services-section {
