--- a/app/routes/public/service/shootings/shootings.css
+++ b/app/routes/public/service/shootings/shootings.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/public/service/shootings/shootings.css */
+/* Info : app/routes/public/service/shootings/shootings.css */
 
 /* Page spécifique */
 .shootings-page {
