--- a/app/routes/public/service/store/store.css
+++ b/app/routes/public/service/store/store.css
@@ -1,4 +1,4 @@
-/* Todo : app/routes/public/service/store/store.css */
+/* Info : app/routes/public/service/store/store.css */
 
 /* Page spécifique */
 .store-page {
